# lite_mamba

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  README.md  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.githooks/: pre-commit
.github/workflows/: docs.yml  publish.yml  tests.yml
architecture/: index.html
benchmarks/: benchmark_mamba.py
docs/: architecture.md  index.md
docs/reference/: api.md
lite_mamba/: __init__.py  causal_dilated_conv1d.py  mamba_simple.py  pyproject.toml  tf_mamba.py
reference/api/: index.html
scripts/: install-hooks.sh
search/: search_index.json
tests/: test_tf_mamba_variants.py
