[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-mamba"
version = "0.1.0"
description = "Pure-PyTorch lightweight Mamba with multi-dilated causal conv front-end"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "einops>=0.6",
]

[project.urls]
Homepage = "https://github.com/yourname/lite-mamba"
Source = "https://github.com/yourname/lite-mamba"

[tool.setuptools]
packages = ["lite_mamba"]
include-package-data = false
